--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "homepage": "https://PiyushJoshi999.github.io/Appscrip-task-Piyush",
+  "homepage": "https://PiyushJoshi999.github.io/BharatGo-task-Piyush",
   "name": "shopit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "firebase": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
