Modified App.js and package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://PiyushJoshi999.github.io/BharatGo-task-Piyush",
+  "homepage": "https://PiyushJoshi999.github.io/BharatGo-ECommerce-Piyush",
   "name": "shopit",
   "version": "0.1.0",
   "private": true,
